Fixed a few things: size on texts, contact-form left alignment, article button resizing and removed navbar at certain width

--- a/css/style.css
+++ b/css/style.css
@@ -512,11 +512,56 @@ footer {
       width: 100%;
     }
 }
-@media only screen and (max-width: 820px) {
-    header {
+@media only screen and (max-width: 1400px) {
+  header nav {
+    display: none;
+  }
+}
+@media only screen and (max-width: 1100px) {
+    .form-headings h2 {
       display: flex;
-      flex-direction: column;
-      height: 130px;
+      flex-direction: row;
+      justify-content: flex-start;
+      padding-left: 3rem;
+    }
+    .form-headings p {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      padding-left: 3rem;
+    }
+    #submit-container h2 {
+      padding: 4rem 5rem 4rem;
+    }
+    .form-container {
+      width: 90%;
+    }
+    .submit-name-1, .submit-name-2, .submit-name-3 {
+        font-weight: 900;
+        font-size: 3rem;
+    }
+
+    .submit-description-1, .submit-description-2, .submit-description-3 {
+        font-size: 2.75rem;
+        padding: 1rem 2rem 4rem;
+    }
+    .founders-name-1, .founders-name-2 {
+      font-weight: 700;
+      font-size: 3rem;
+    }
+    .founders-description-1, .founders-description-2 {
+      font-size: 2.75rem;
+    }
+    .article-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      height: 15vh;
+      width: 15vw;
+    }
+    .article-description {
+      font-size: 2.75rem;
     }
 }
 @media only screen and (max-width: 550px) {
@@ -534,20 +579,5 @@ footer {
       align-items: center;
       height: 5px;
       width: 10px;
-    }
-}
-@media only screen and (max-width: 540px) {
-    header {
-      height: 150px;
-    }
-}
-@media only screen and (max-width: 460px) {
-    header {
-      height: 200px;
-    }
-}
-@media only screen and (max-width: 370px) {
-    header {
-      height: 250px;
     }
 }
